--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "pinia": "^3.0.2",
     "sass": "^1.89.2",
     "typed.js": "^2.1.0",
