--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
+    "emailjs-com": "^3.2.0",
     "pinia": "^3.0.2",
     "sass": "^1.89.2",
     "typed.js": "^2.1.0",
